--- a/src/components/shared/Navbar/Navbar.module.css
+++ b/src/components/shared/Navbar/Navbar.module.css
@@ -7,10 +7,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* z-index: -2; */
+    z-index: 2;
     padding: 0 1rem;
     padding-right: 5rem;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
 }
 .navbarTwoSides{
     height: 100%;
