--- a/src/components/shared/Right side menu/RigthSideMenu.module.css
+++ b/src/components/shared/Right side menu/RigthSideMenu.module.css
@@ -6,6 +6,7 @@
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 2;
 }
 
 .menuList{
@@ -167,6 +168,7 @@
     width: auto;
     padding-right: 10px;
     transition: all 100ms linear;
+    background-color: transparent;
 }
 .menu.expand .menuList li a{
     margin: 0;
